samples/_failures_safe/1761471970_13128d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31a9beef.c:147: error: expected ‘;’, ‘,’ or ‘)’ at end of input
